Code block fix Blockquote fix Letter spacing for partners slider caption fix

--- a/_sass/bootstrap-overrides/_type.scss
+++ b/_sass/bootstrap-overrides/_type.scss
@@ -20,15 +20,6 @@ small,
 
 .blockquote {
     > p {
-        position: relative;
-        padding-right: 18px;
-        padding-left: 18px;
-
-        @include media-breakpoint-up('md') {
-            padding-right: 36px;
-            padding-left: 36px;
-        }
-
         .mdi {
             position: absolute;
             color: $primary;
